--- a/index.html
+++ b/index.html
@@ -7,6 +7,88 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="sidebar">
+            <h1>Dashboard</h1>
+            <a href="">Home</a>
+            <a href="">Profile</a>
+            <a href="">Messages</a>
+            <a href="">History</a>
+            <a href="">Tasks</a>
+            <a href="">Communities</a>
+            <a href="">Settings</a>
+            <a href="">Support</a>
+            <a href="">Privacy</a>
+        </div>
+
+        <div class="header">
+            <div class="upper-header">
+                <div>
+                    <button class="search"><img src="" alt="search"></button>
+                    <input type="text">
+                </div>
+                <div>
+                    <img src="" alt="notification">
+                    <img src="" alt="profile-icon">
+                    <p>firstName lastName</p>
+                </div>
+            </div>
+            <div class="bottom-header">
+                <div>
+                    <img src="" alt="profile-icon-big">
+                    <div>
+                        <p>Hi there</p>
+                        <p>firstName lastName (@firstName)</p>
+                    </div>
+                </div>
+                <div>
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
+            </div>
+        </div>
+        <div class="content">
+            <div class="projects">
+                <h1>Projects</h1>
+                <div class="projects-wrapper">
+                    <div>
+                        <h3>Super Cool Project</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                    <div>
+                        <h3>Less cool project</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                    <div>
+                        <h3>Impossible App</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                    <div>
+                        <h3>Easy Peasy App</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                    <div>
+                        <h3>Ad Blocker</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                    <div>
+                        <h3>Money Maker</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="sidebar-right">
+                <div class="announcements">
+                    <h1>Announcements</h1>
+                    <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                </div>
+                <div class="trending">
+                    <h1>Trending</h1>
+                    <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
